[package]
name = "photos_network_plugin"
version = "0.2.0"
authors = ["Photos network developers <info@photos.network>"]
edition = "2021"

description = "The core system of photos.network an free and open-source project (FOSS) for a self-hosted photo management."
documentation = "https://developers.photos.network/"
readme = "README.md"

repository = "https://github.com/photos-network/plugin"

[dependencies]
abi_stable = "0.11.1"
core_extensions = { version = "1.5.3", default_features = false, features = ["std"] }
